# rmoss_contrib

./: README.md  dependency.repos
.github/workflows/: ci.yml
rm_auto_aim/: CMakeLists.txt  README.md  package.xml
rm_auto_aim/config/: simple_auto_aim_params.yaml
rm_auto_aim/doc/: auto_aim_algo.md
rm_auto_aim/include/rm_auto_aim/: armor_detector.h  armor_detector.hpp  auto_aim_server.hpp  simple_auto_aim_algo.h  simple_auto_aim_algo.hpp  simple_auto_aim_node.hpp  task_auto_aim.h  task_auto_aim.hpp  task_auto_aim_node.h
rm_auto_aim/launch/: armor_detector_test.launch.py  sim_cam_image.launch.py  simple_auto_aim.launch.py  task_auto_aim.launch.py  task_auto_aim_test.launch.py  test_armor_detector.launch.py
rm_auto_aim/nodes/: auto_aim_server_node.cpp  task_auto_aim.cpp  task_auto_aim_node.cpp  test_armor_detector.cpp  test_armor_detector_node.cpp
rm_auto_aim/res/: task_auto_aim_config.yaml
rm_auto_aim/scripts/: client.py  client_test.py
rm_auto_aim/src/: armor_detector.cpp  armor_detector_test_main.cpp  auto_aim_server.cpp  simple_auto_aim_algo.cpp  simple_auto_aim_main.cpp  simple_auto_aim_node.cpp  task_auto_aim.cpp  task_auto_aim_node.cpp
rm_auto_aim/src/auto_aim_algo/: armor_detector.cpp  simple_auto_aim_algo.cpp
rm_power_rune2019/: CMakeLists.txt  README.md  package.xml
rm_power_rune2019/include/rm_power_rune2019/: power_rune_node.hpp  power_rune_server.hpp  rune_def.hpp  rune_detector.hpp  rune_prediction_tool.hpp  rune_state_machine.hpp  rune_types.hpp  simple_power_rune_algo.hpp  task_power_rune.hpp
rm_power_rune2019/launch/: large_power_rune_test.launch.py  power_rune.launch.py
rm_power_rune2019/nodes/: power_rune_server_node.cpp  task_power_rune_node.cpp
rm_power_rune2019/res/: task_power_rune_config.yaml
rm_power_rune2019/scripts/: client.py
rm_power_rune2019/src/: power_rune_main.cpp  power_rune_node.cpp  power_rune_server.cpp  rune_detector.cpp  rune_prediction_tool.cpp  rune_state_machine.cpp  simple_power_rune_algo.cpp  task_power_rune.cpp
rm_power_rune2019/src/power_rune_algo/: rune_detector.cpp  rune_prediction_tool.cpp  rune_state_machine.cpp  simple_power_rune_algo.cpp
rmoss_auto_aim/: CMakeLists.txt  README.md  package.xml
rmoss_auto_aim/config/: simple_auto_aim_params.yaml
rmoss_auto_aim/include/rmoss_auto_aim/: armor_detector.hpp  simple_auto_aim_algo.hpp  simple_auto_aim_node.hpp
rmoss_auto_aim/launch/: armor_detector_test.launch.py  simple_auto_aim.launch.py
rmoss_auto_aim/scripts/: client.py
rmoss_auto_aim/src/: armor_detector_test_main.cpp  simple_auto_aim_main.cpp  simple_auto_aim_node.cpp
rmoss_auto_aim/src/auto_aim_algo/: armor_detector.cpp  simple_auto_aim_algo.cpp
rmoss_power_rune2019/: CMakeLists.txt  README.md  package.xml
rmoss_power_rune2019/config/: power_rune_params.yaml
rmoss_power_rune2019/doc/: rune_state_machine.md
rmoss_power_rune2019/include/rmoss_power_rune2019/: power_rune_node.hpp  rune_detector.hpp  rune_prediction_tool.hpp  rune_state_machine.hpp  rune_types.hpp  simple_power_rune_algo.hpp
rmoss_power_rune2019/launch/: power_rune.launch.py
rmoss_power_rune2019/scripts/: client.py
rmoss_power_rune2019/src/: power_rune_main.cpp  power_rune_node.cpp
rmoss_power_rune2019/src/power_rune_algo/: rune_detector.cpp  rune_prediction_tool.cpp  rune_state_machine.cpp  simple_power_rune_algo.cpp
