<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_auto_aim</name>
  <version>1.0.0</version>
  <description>
    a simple implemetation of a general robomaster vision-based task Auto-Aim .
  </description>
  <maintainer email="1350824033@qq.com">zhenpeng ge</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rm_tool</build_depend>
  <build_depend>rm_task</build_depend>
  <build_depend>rm_interfaces</build_depend>
  <build_depend>rm_projectile_motion</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rm_tool</exec_depend>
  <exec_depend>rm_task</exec_depend>
  <build_depend>rm_interfaces</build_depend>
  <exec_depend>rm_projectile_motion</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

