<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_power_rune2019</name>
  <version>1.0.0</version>
  <description>
    A Simple Implemetation for RoboMaster Vision-based Task Auto-Aim-Task .
  </description>
  <maintainer email="zhenpeng.ge@qq.com">zhenpeng ge</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rmoss_interfaces</build_depend>
  <build_depend>rm_util</build_depend>
  <build_depend>rm_projectile_motion</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <build_depend>rmoss_interfaces</build_depend>
  <exec_depend>rm_util</exec_depend>
  <exec_depend>rm_projectile_motion</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

