<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmoss_power_rune2019</name>
  <version>1.0.0</version>
  <description>
    A Simple Implemetation for RoboMaster Vision-based Task Power Rune 2019 .
  </description>
  <maintainer email="zhenpeng.ge@qq.com">zhenpeng ge</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rmoss_interfaces</build_depend>
  <build_depend>rmoss_util</build_depend>
  <build_depend>rmoss_cam</build_depend>
  <build_depend>rmoss_projectile_motion</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rmoss_interfaces</exec_depend>
  <exec_depend>rmoss_util</exec_depend>
  <exec_depend>rmoss_cam</exec_depend>
  <exec_depend>rmoss_projectile_motion</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

